# bec_backend

./: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  readme.md  recipe.json
k8s/: deployment.yaml
src/: main.rs
src/apis/: bec.rs  catchers.rs  database.rs  mod.rs  openai.rs  routes.rs  themoviedb.rs
src/apis/auth/: bearer.rs  mod.rs  models.rs  public_key.rs
src/apis/model/: actor.rs  comment.rs  error.rs  genre.rs  leaderboard.rs  like.rs  mod.rs  movie.rs  openai.rs  post.rs  user.rs
src/apis/postgres/: pool.rs
