
[package]
name = "bec_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
futures = "0.3"
tokio = { version = "1.12.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsonwebtoken = "8"
sqlx = { version = "0.6", features = ["postgres", "runtime-tokio-rustls", "macros", "uuid"]}
dotenv = "0.15.0"
lazy_static = "1.4.0"
async_once = "0.2.6"

[dependencies.rocket]
version = "0.5.0-rc.1"
features = ["json"]
